# IFJ-2023-project-compiler

./: CMakeLists.txt  README.md  TODO  example.ifj23  lexer.drawio  macros.h  main.c  odevzdani.sh  run.sh  test.swift
archive/: symtable.h
odevzdani/: codegen.c  expr_parser.c  expr_parser.h  lists.c  lists.h  macros.h  main.c  memory.c  memory.h  parser.c  parser.h  parts.h  rozdeleni  rozsireni  scanner.c  scanner.h  source_file.c  source_file.h  stack.c  stack.h  string_util.c  string_util.h  symtable.c  symtable.h  token.c  token.h
parts/: parts.h
parts/lexer/: lexer.c  lexer.h
parts/syntax/: syntax.c  syntax.h
pokusne/: Makefile  codegen.c  codegen.h  expr_parser.c  expr_parser.h  lists.c  lists.h  macros.h  main.c  memory.h  new_symtable.c  new_symtable.h  parser.c  parser.h  parts.h  rozdeleni  rozsireni  scanner.c  stack.h  string_util.c  symtable.c  token.c  token.h
scr/: macros.h  main.c
scr/parts/: error.c  error.h  parts.h
scr/parts/codegen/: codegen.c  codegen.h
scr/parts/lexer/: fsm.txt  lexer.c  lexer.h
scr/parts/parser/: LL_1_constructor.py  _parser.c  expr_parser.c  expr_parser.h  expressions  grammar  grammar.y  new_symtable.c  new_symtable.h  parser.c  parser.h  prec_gen.py  symtable.c  symtable.h  table.cvs
scr/parts/parser/gen_scripts/: LL_1_constructor.py  _parser.c  grammar.y  prec_gen.py
scr/parts/scanner/: grammar.y  scanner.c  scanner.h  symtable.h  token.c  token.h  tokens
scr/parts/syntax/: syntax.c
scr/parts/token/: token.c  token.h
scr/utils/: file_util.c  file_util.h  lists.c  lists.h  memory.c  source_file.c  source_file.h  stack.c  stack.h  string_util.c  string_util.h  utils.h
src/: Makefile  macros.h  rozdeleni
src/parts/codegen/: codegen.c  codegen.h
src/parts/parser/: expr_parser.c  expr_parser.h  parser.c  parser.h  symtable.c
src/parts/parser/gen_scripts/: LL_1_constructor.py  LLtable.py  _parser.c  _table.csv  grammar  grammar.y  prec_gen.py  rules.txt  table.csv
src/parts/scanner/: scanner.c  scanner.h  token.c  token.h
src/utils/: list.c  list.h  lists.c  memory.c  source_file.c  source_file.h
test/: test.sh
test/input/: substring.swift
tests/: compiler  sym_test.c  test.c
tests/test1/: log.txt  test.sh
tests/test1/input/: default_nil_init.swift  if_let.swift
tests/test2/: backend_tests.py  compiler  generated_code  log.txt  rec_parser_tests.py  run.sh  test_runtime.py
tests/test_codes/: double.swift  example1.swift  example2.swift  example3.swift  fun.swift  hello.swift  substr.swift  visibility.swift
utils/: file_util.c  file_util.h  string_util.c  string_util.h  utils.h
